ISPN-9753 Fix maven parallel builds